java version compatibility. these methods wouldn't compile in carbon